--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ nav#navbar .menu a:hover {
     background: rgb(101, 101, 248);
 }
 
-#welcome-section{
+#welcome-section {
     height: 100vh;
     width: 100%;
     background: #2f3133;
@@ -46,20 +46,56 @@ nav#navbar .menu a:hover {
     flex-direction: column;
 }
 
-#welcome-section h1{
+#welcome-section h1 {
     color: white;
     font-weight: bold;
     font-size: 3em;
 }
 
-#welcome-section p{
+#welcome-section p {
     color: red;
     font-size: 24px;
     position: relative;
     top: -40px;
 }
 
-
-@media(max-width: 500px){
-
+section#projects {
+    background-color: #45567d;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
+section#projects>* {
+    flex: 1 1 auto;
+}
+
+.project-tile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.project-tile img {
+    width: 35rem;
+}
+
+section#projects>h2 {
+    margin: 0 auto;
+    color: #fff;
+    text-align: center;
+    padding-top: 5rem;
+    font-size: 2.3rem;
+    padding-bottom: 0.5rem;
+    margin-bottom: 3rem;
+    border-bottom: 1px solid #fff;
+    max-width: fit-content;
+}
+
+
+
+
+@media(max-width: 500px) {}
