--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,26 @@ nav#navbar .menu a:hover {
 
 section#projects {
     background-color: #45567d;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#projects .project-container{
+    display: flex;
+    flex-basis: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#projects .project-container div{
+    margin: 10px;
+}
+
+#projects .project-container img{
+    width: 400px;
+    height: 400px;
 }
 
 section#projects>* {
@@ -97,5 +112,39 @@ section#projects>h2 {
 
 
 
+/* footer section */
+footer{
+    background-color: #293841;
+    height: 100vh;
+    width: 100%;
+}
+
+footer .social-links{
+    display: flex;
+    height: inherit;
+    width: inherit;
+    justify-content: center;
+    align-items: center;
+}
+
+footer .social-links a{
+    color: #eeeeee;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 15px;
+    top: 0;
+    transition: transform 0.4s ease-in-out
+}
+
+footer .social-links a:hover{
+    transform: translateY(7px);
+}
+
+footer .bottom-footer{
+    border-top: 3px solid #d21e39;
+    width: 100%;
+    padding: 60px;
+    background: #293841;
+}
 
 @media(max-width: 500px) {}
