--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ section#projects {
 }
 
 #projects .project-container img{
-    width: 400px;
+    width: 100%;
     height: 400px;
 }
 
@@ -91,6 +91,19 @@ section#projects>* {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 400px;
+    margin: 20px;
+}
+
+.project-tile p{
+    padding: 10px;
+    background: #2d3841;
+    text-align: center;
+    width: 380px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
